--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ html {
   font-family: "Arial Rounded MT Bold", sans-serif;
 }
 
-body {
+main {
   background-image: url('/buildings.png');
   background-repeat: no-repeat;
   background-size: contain;
